# xmax-mainchain

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build-windows.md  configuration.md
CMakeModules/: FindMongoDB.cmake
blockchain/: CMakeLists.txt
blockchain/chain/: CMakeLists.txt  block.cpp  builder_rule.cpp  chain.cpp  chain_context.cpp  chain_system_tables.cpp  chain_utils.cpp
blockchain/chain/include/: block.hpp  block_content.hpp  builder_rule.hpp  chain.hpp  chain_context.hpp  chain_db.hpp  chain_global.hpp  chain_tables.hpp  chain_types.hpp  chain_utils.hpp  chaintypes.hpp  pending_block.hpp  transaction.hpp
blockchain/chain/include/objects/: account.hpp  objectbase.hpp
blockchain/chain/include/tables/: account.hpp  tablebase.hpp
docs/: RoadMap.md  doxygen_format.md
doxyapi/: apimainpage.md
foundation/: CMakeLists.txt
foundation/application/: CMakeLists.txt  application.cpp  pluginface.cpp
foundation/application/include/: app_types.hpp  application.hpp  apps.hpp  plugin.hpp  pluginface.hpp
foundation/core/: CMakeLists.txt  core.cpp  debug.cpp  log.cpp
foundation/core/include/: build.hpp  debug.hpp  generictypes.hpp  log.hpp  xmaxtypes.hpp
foundation/pro/: CMakeLists.txt
foundation/pro/crypto/: Base58.cpp  Base58String.cpp  privatekey.cpp  publickey.cpp  secp256_util.cpp
foundation/pro/exception/: exception_base.cpp  exceptions.cpp
foundation/pro/include/pro/: assert.hpp  protypes.hpp
foundation/pro/include/pro/crypto/: Base58.hpp  Base58String.hpp  privatekey.hpp  publickey.hpp  secp256_util.hpp
foundation/pro/include/pro/exception/: exception_base.h  exception_base.hpp  exceptions.h  exceptions.hpp
foundation/pro/include/pro/io/: file_system.hpp
foundation/pro/include/pro/log/: console_logger.hpp  debug.hpp  log.hpp  log_base.hpp  log_message.hpp  log_system.hpp
foundation/pro/include/pro/scode/: shortcode.hpp  shortname.hpp
foundation/pro/include/pro/types/: any_object.hpp  any_value.hpp  any_value_base.hpp  build.hpp  generictypes.hpp  protypes.hpp  time.hpp  tree.hpp
foundation/pro/include/pro/utils/: bloomfilter.hpp  reflect.hpp  sha256.hpp  singleton.hpp  string_misc.hpp  string_utils.hpp  time_utils.hpp
foundation/pro/log/: console_logger.cpp  debug.cpp  log.cpp  log_message.cpp  log_system.cpp
foundation/pro/scode/: shortcode.cpp  shortname.cpp
foundation/pro/types/: any_object.cpp  any_value.cpp  any_value_base.cpp  core.cpp
foundation/pro/utils/: bitutil.hpp  bloomfilter.cpp  sha256.cpp  string_utils.cpp  time_utils.cpp
foundation/unitedb/: CMakeLists.txt  database.cpp  dbundo.cpp  undomanager.cpp
foundation/unitedb/include/unitedb/: database.hpp  dbbase.hpp  dbindexed.hpp  dbobject.hpp  dbobjectbase.hpp  dbtable.hpp  dbtypes.hpp  dbundo.hpp  dbundomanager.hpp  dbundoop.hpp  table.hpp  typebase.hpp  undo.hpp  undomanager.hpp  unitedb.hpp  unitedef.hpp
html/api/html/: annotated.html  any__object_8cpp.html  any__object_8hpp.html  any__object_8hpp_source.html  any__value_8cpp.html  any__value_8hpp.html  any__value_8hpp_source.html  any__value__base_8cpp.html  any__value__base_8hpp.html  any__value__base_8hpp_source.html  app__types_8hpp.html  app__types_8hpp_source.html  application_8cpp.html  application_8hpp.html  application_8hpp_source.html  apps_8hpp.html  apps_8hpp_source.html  assert_8hpp.html  assert_8hpp_source.html  bloomfilter_8hpp_source.html  build_8hpp.html  build_8hpp_source.html  classes.html  classpro_1_1_any_object-members.html  classpro_1_1_any_object.html  classpro_1_1_any_value-members.html  classpro_1_1_any_value.html  classpro_1_1_singleton-members.html  classpro_1_1_singleton.html  classpro_1_1_time_base-members.html  classpro_1_1_time_base.html  classpro_1_1_time_microseconds-members.html  classpro_1_1_time_microseconds.html  classpro_1_1_time_milliseconds-members.html  classpro_1_1_time_milliseconds.html  classpro_1_1_time_seconds-members.html  classpro_1_1_time_seconds.html  classxmaxapp_1_1_application-members.html  classxmaxapp_1_1_application.html  (+85 more)
launch/: CMakeLists.txt
launch/xmaxrun/: CMakeLists.txt  main.cpp
libraries/: CMakeLists.txt
libraries/crypto/: README.md  index.cpp
libraries/crypto/src/: hasher.h  number.h  (+1 more)
libraries/mongo-c-driver-1.9.4/: .gitignore
libraries/protobuf/: CMakeLists.txt
libraries/secp256k1/: CMakeLists.txt
libraries/v8/: v8version.txt
network/: CMakeLists.txt
network/proto_base/: CMakeLists.txt
network/protos/: netmessage.proto
network/protos_cpp/: any.pb.cc  any.pb.h  any_test.pb.cc  any_test.pb.h  netmessage.pb.cc  netmessage.pb.h  test.pb.cc  test.pb.h  timestamp.pb.cc  timestamp.pb.h
network/test/: CMakeLists.txt  network_test.cpp
plugins/: CMakeLists.txt
plugins/apirpc_plugin/: CMakeLists.txt  apirpc_plugin.cpp
plugins/blockbuilder_plugin/: CMakeLists.txt  blockbuilder_plugin.cpp
plugins/blockchain_plugin/: CMakeLists.txt  blockchain_plugin.cpp
plugins/contractutil_plugin/: CMakeLists.txt  contractutil_plugin.cpp
plugins/mongodb_plugin/: CMakeLists.txt  mongodb_plugin.cpp
plugins/mongodb_plugin/include/: mongodb_plugin.hpp
plugins/vm_plugin/: CMakeLists.txt  Int64Bind.h  bindmacro.h  script_global_module.cpp  script_global_module.hpp  script_module.cpp  script_module.h  script_module.hpp  script_util.cpp  script_util.h  script_util.hpp
plugins/vm_plugin/script_interface/: V8BindObject.h  V8BindObject.hpp  int128_bind.cpp  int128_bind.hpp  int256_bind.cpp  int256_bind.hpp  int64_bind.cpp  int64_bind.hpp  uint128_bind.cpp  uint128_bind.hpp  uint256_bind.cpp  uint256_bind.hpp  uint64_bind.cpp  uint64_bind.hpp
plugins/xmaxnet_plugin/: CMakeLists.txt  netmessage.cpp  netmessage.pb.cpp  netmessage.pb.h  netmessage_pool.cpp  netmsg_processing.cpp  netutl.cpp  xmaxnet_plugin.cpp  xmaxnet_pluginimpl.cpp  xmx_connection.cpp
test/: CMakeLists.txt
test/db_test/: CMakeLists.txt  db_test.cpp
test/network_test/: CMakeLists.txt  network_test.cpp
test/pro_test/: CMakeLists.txt  pro_test.cpp
test/script_test/: CMakeLists.txt  script_test.cpp
test/unitedb_test/: CMakeLists.txt  unitedb_test.cpp
(+97 files in other folders)
